--- a/src/main/resources/templates/thymeleaf/aicc/Course_viewDay2.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_viewDay2.html
@@ -61,7 +61,7 @@
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a th:href="@{'Event_view?id='+ ${aicc2.get(0).getEvent_num()}}">
+					<a href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aicc2.get(0).getEvent_name()}" class="text-center mt-3 "></span>
 					</a>
@@ -497,5 +497,19 @@
 		window.open('/Event_view?id='+param, '_blank',featureWindow );
 	}
 </script>
+<script>
+    // Prevent default scrolling behavior when clicking on links
+    document.addEventListener('DOMContentLoaded', function() {
+        var links = document.querySelectorAll('a');
+        links.forEach(function(link) {
+            link.addEventListener('click', function(event) {
+                event.preventDefault(); 
+                
+                console.log('Clicked link:', link.getAttribute('href'));
+            });
+        });
+    });
+</script>
+
 </body>
 </html>
