--- a/src/main/resources/templates/thymeleaf/aicc/Course_view.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_view.html
@@ -42,7 +42,7 @@
 			<div class="position-absolute top-0 start-0 translate-middle text-black ms-3 ps-5 pt-5"> day1</div>
 					<div class="row courseListRow px-0 mx-0 bg-white p-5 ">
 						<div class="col-8 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -51,7 +51,7 @@
 							</a>
 						</div>
 						<div class="col-8 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -61,7 +61,7 @@
 							</a>
 						</div>
 						<div class="col-8 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -71,17 +71,7 @@
 							</a>
 						</div>
 						<div class="col-8 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood2.get(0).getEvent_num()}]])">
-								<img
-								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
-								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
-								<span th:text="${aiccFood2.get(0).getEvent_name()}"
-									class="text-center mt-3 "></span>
-							</a>
-						</div>
-						<div class="col-8 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccCafe.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccCafe.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -90,6 +80,18 @@
 									class="text-center"></span>
 							</a>
 						</div>
+						
+						<div class="col-8 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood2.get(0).getEvent_num()}]])">
+								<img
+								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
+								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								<span th:text="${aiccFood2.get(0).getEvent_name()}"
+									class="text-center mt-3 "></span>
+							</a>
+						</div>
+						
 						
 					</div>
 				</div>
@@ -302,7 +304,7 @@
 		for (var i = 0; i < positions.length; i++) {
 			var content = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="#"  onclick="func_popEvent('+positions[i].number+')">'
+					+ '            <a class="course_view_popupLink" href="#"  onclick="func_popEvent('+positions[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -384,13 +386,10 @@
 	<script>
     // Prevent default scrolling behavior when clicking on links
     document.addEventListener('DOMContentLoaded', function() {
-        var links = document.querySelectorAll('a');
+        var links = document.querySelectorAll('.course_view_popupLink');
         links.forEach(function(link) {
             link.addEventListener('click', function(event) {
-                event.preventDefault(); // Prevent default behavior
-                // Optionally, you can perform additional actions here
-                // For example, you can animate scrolling to the target instead of just preventing it
-                // For simplicity, let's just log the clicked link's href
+                event.preventDefault(); 
                 console.log('Clicked link:', link.getAttribute('href'));
             });
         });
