--- a/src/main/resources/templates/thymeleaf/aicc/Course_viewDay2.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_viewDay2.html
@@ -49,37 +49,38 @@
 			</div>
 			<div class="row courseListRow px-0 mx-0 bg-white p-5 ">
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aicc.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span class="text-center mt-3" th:text="${aicc.get(0).getEvent_name()}"></span>
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aiccFood.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aiccFood.get(0).getEvent_name()}" class=" mt-3"></span>
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aicc2.get(0).getEvent_name()}" class="text-center mt-3 "></span>
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aiccFood2.get(0).getEvent_num()}]])">
-					<img th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
-					<span th:text="${aiccFood2.get(0).getEvent_name()}" class="text-center mt-3 "></span>
-					</a>
-				</div>
-				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aiccCafe.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccCafe.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aiccCafe.get(0).getEvent_name()}" class="text-center"></span>
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${hotel.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood2.get(0).getEvent_num()}]])">
+					<img th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
+					<span th:text="${aiccFood2.get(0).getEvent_name()}" class="text-center mt-3 "></span>
+					</a>
+				</div>
+				
+				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${hotel.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${hotel.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${hotel.get(0).getEvent_name()}" class="text-center"></span>
 					</a>
@@ -95,35 +96,38 @@
 			</div>
 			<div class="row courseListRow px-0 mx-0 bg-white p-5 ">
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aicc3.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc3.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aicc3.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span class="text-center mt-3" th:text="${aicc3.get(0).getEvent_name()}"></span>
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aiccFood3.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood3.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aiccFood3.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aiccFood3.get(0).getEvent_name()}" class=" mt-3"></span>
 					</a>
 				</div>
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aicc4.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc4.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aicc4.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aicc4.get(0).getEvent_name()}" class="text-center mt-3 "></span>
 					</a>
 				</div>
+				
 				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aiccFood4.get(0).getEvent_num()}]])">
-					<img th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
-					<span th:text="${aiccFood4.get(0).getEvent_name()}" class="text-center mt-3 "></span>
-					</a>
-				</div>
-				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-					<a href="#" th:onclick="func_popEvent([[${aiccCafe2.get(0).getEvent_num()}]])">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccCafe2.get(0).getEvent_num()}]])">
 					<img th:src="@{'../img/info/' + ${aiccCafe2.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
 					<span th:text="${aiccCafe2.get(0).getEvent_name()}" class="text-center"></span>
 					</a>
 				</div>
+				
+				<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
+					<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood4.get(0).getEvent_num()}]])">
+					<img th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}" alt="" class="img-fluid mx-auto rounded-4 d-block my-3" style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';">
+					<span th:text="${aiccFood4.get(0).getEvent_name()}" class="text-center mt-3 "></span>
+					</a>
+				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -290,7 +294,7 @@
 		for (var i = 0; i < positions.length; i++) {
 			var content = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="#"  onclick="func_popEvent('+positions[i].number+')">'
+					+ '            <a class="course_view_popupLink" href="#"  onclick="func_popEvent('+positions[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -411,7 +415,7 @@
 		for (var i = 0; i < positions2.length; i++) {
 			var content2 = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="#"  onclick="func_popEvent('+positions2[i].number+')">'
+					+ '            <a class="course_view_popupLink" href="#"  onclick="func_popEvent('+positions2[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -500,11 +504,10 @@
 <script>
     // Prevent default scrolling behavior when clicking on links
     document.addEventListener('DOMContentLoaded', function() {
-        var links = document.querySelectorAll('a');
+        var links = document.querySelectorAll('.course_view_popupLink');
         links.forEach(function(link) {
             link.addEventListener('click', function(event) {
                 event.preventDefault(); 
-                
                 console.log('Clicked link:', link.getAttribute('href'));
             });
         });
