--- a/src/main/resources/templates/thymeleaf/aicc/Course_viewDay3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_viewDay3.html
@@ -59,7 +59,7 @@
 			<div class="position-absolute top-0 start-0 translate-middle text-black ms-3 ps-5 pt-5"> day1</div>
 					<div class="row courseListRow px-0 mx-0 bg-white p-5 ">
 						<div class="col-6 col-md-4 col-lg-2 mx-auto text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -68,7 +68,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -78,7 +78,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc2.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -88,17 +88,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood2.get(0).getEvent_num()}]])">
-								<img
-								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
-								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
-								<span th:text="${aiccFood2.get(0).getEvent_name()}"
-									class="text-center mt-3 "></span>
-							</a>
-						</div>
-						<div class="col-6 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccCafe.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccCafe.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -107,8 +97,20 @@
 									class="text-center"></span>
 							</a>
 						</div>
+						
 						<div class="col-6 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${hotel.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood2.get(0).getEvent_num()}]])">
+								<img
+								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
+								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								<span th:text="${aiccFood2.get(0).getEvent_name()}"
+									class="text-center mt-3 "></span>
+							</a>
+						</div>
+						
+						<div class="col-6 col-md-4 col-lg-2 mx-auto  text-truncate px-0 mx-0 text-center">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${hotel.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${hotel.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -126,7 +128,7 @@
 				<div class="position-absolute top-0 start-0 translate-middle text-black ms-3 ps-5 pt-5"> day2</div>
 				<div class="row courseListRow px-0 mx-0 bg-white p-5 ">
 						<div class="col-6 col-md-4 col-lg-2  mx-auto text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc3.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc3.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -135,7 +137,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood3.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood3.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccFood3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -145,7 +147,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc4.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc4.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -155,17 +157,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood4.get(0).getEvent_num()}]])">
-								<img
-								th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}"
-								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
-								<span th:text="${aiccFood4.get(0).getEvent_name()}"
-									class="text-center mt-3 "></span>
-							</a>
-						</div>
-						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccCafe2.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccCafe2.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -174,8 +166,20 @@
 									class="text-center"></span>
 							</a>
 						</div>
+						
 						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${hotel2.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood4.get(0).getEvent_num()}]])">
+								<img
+								th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}"
+								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								<span th:text="${aiccFood4.get(0).getEvent_name()}"
+									class="text-center mt-3 "></span>
+							</a>
+						</div>
+						
+						<div class="col-6 col-md-4 col-lg-2  mx-auto  text-truncate px-0 mx-0 text-center">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${hotel2.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${hotel2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -192,7 +196,7 @@
 				<div class="position-absolute top-0 start-0 translate-middle text-black ms-3 ps-5 pt-5"> day3</div>
 					<div class="row courseListRow px-0 mx-0 bg-white p-5 ">
 						<div class="col-12 col-md-2 mx-auto text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc5.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc5.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc5.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -201,7 +205,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood5.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood5.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccFood5.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -211,7 +215,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-2  mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aicc6.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aicc6.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aicc6.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -221,17 +225,7 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccFood6.get(0).getEvent_num()}]])">
-								<img
-								th:src="@{'../img/info/' + ${aiccFood6.get(0).getEvent_thumbnail()}}"
-								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
-								<span th:text="${aiccFood6.get(0).getEvent_name()}"
-									class="text-center mt-3 "></span>
-							</a>
-						</div>
-						<div class="col-6 col-md-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a href="#" th:onclick="func_popEvent([[${aiccCafe3.get(0).getEvent_num()}]])">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccCafe3.get(0).getEvent_num()}]])">
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
@@ -240,6 +234,18 @@
 									class="text-center"></span>
 							</a>
 						</div>
+						
+						<div class="col-6 col-md-2 mx-auto  text-truncate px-0 mx-0 text-center">
+							<a class="course_view_popupLink" href="#" th:onclick="func_popEvent([[${aiccFood6.get(0).getEvent_num()}]])">
+								<img
+								th:src="@{'../img/info/' + ${aiccFood6.get(0).getEvent_thumbnail()}}"
+								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								<span th:text="${aiccFood6.get(0).getEvent_name()}"
+									class="text-center mt-3 "></span>
+							</a>
+						</div>
+						
 					</div>
 				</div>
 
@@ -419,7 +425,7 @@
 		for (var i = 0; i < positions.length; i++) {
 			var content = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="#"  onclick="func_popEvent('+positions[i].number+')">'
+					+ '            <a class="course_view_popupLink" href="#"  onclick="func_popEvent('+positions[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -564,7 +570,7 @@
 		for (var i = 0; i < positions2.length; i++) {
 			var content2 = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="#"  onclick="func_popEvent('+positions2[i].number+')">'
+					+ '            <a class="course_view_popupLink" href="#"  onclick="func_popEvent('+positions2[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -707,7 +713,7 @@
 		for (var i = 0; i < positions3.length; i++) {
 			var content3 = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="#"  onclick="func_popEvent('+positions3[i].number+')">'
+					+ '            <a class="course_view_popupLink" href="#"  onclick="func_popEvent('+positions3[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -819,13 +825,10 @@
 <script>
     // Prevent default scrolling behavior when clicking on links
     document.addEventListener('DOMContentLoaded', function() {
-        var links = document.querySelectorAll('a');
+        var links = document.querySelectorAll('.course_view_popupLink');
         links.forEach(function(link) {
             link.addEventListener('click', function(event) {
-                event.preventDefault(); // Prevent default behavior
-                // Optionally, you can perform additional actions here
-                // For example, you can animate scrolling to the target instead of just preventing it
-                // For simplicity, let's just log the clicked link's href
+                event.preventDefault(); 
                 console.log('Clicked link:', link.getAttribute('href'));
             });
         });
