--- a/src/main/resources/templates/footer/robot.html
+++ b/src/main/resources/templates/footer/robot.html
@@ -12,8 +12,8 @@
 <body >
 
 		<a href="aicc" th:fragment="robot" >
-               <div class="fixed-bottom  ms-auto " style="z-index:1; width: 150px;">
-               	<div class=" m-2 bg-white rounded-2 px-2 py-2 text-center border f12" style="position: absolute; z-index: 2;bottom:0px;right: 0px">저와 함께 <br />여행코스 짜실래요?</div>
+               <div class="fixed-bottom  ms-auto " style="z-index:1; width: 150px;margin-right: 20px;">
+               	<div class=" m-2 bg-white rounded-2 px-2 py-2 text-center border f12" style="position: absolute; z-index: 2;bottom:0px;right:00px">저와 함께 <br />여행코스 짜실래요?</div>
                   <img src="../img/aicc/—Pngtree—three dimensional 3d toys on_7032313.png" alt=""
                         class="d-block ms-auto robot m-2 " style="z-index:0;transform: scaleX(-1); width: 100px;height: 100px;">
 
