--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -158,7 +158,7 @@
 										<i class="fi fi-br-heart px-2"></i>
 									</a>
 								</th:block>
-								<th:block th:if="${comment.getFeed_comment_like()}==1">w
+								<th:block th:if="${comment.getFeed_comment_like()}==1">
 									<a class="dropdown-item" th:href="@{'/feed_comment_like?num='+${feedList.getFeed_num()}+'&comment_num='+${comment.getFeed_comment_num()}+'&on=0'}">
 										<i class="fi fi-sr-heart px-2"></i>
 									</a>
@@ -192,7 +192,14 @@
 									      </div>
 									      <div class="modal-footer border-none">
 									        <button type="button" class="btn btn-light text-dark rounded-pill px-3" data-bs-dismiss="modal">취소</button>
-									        <button type="button" class="btn btn-main rounded-pill px-3"><a class="dropdown-item active" th:href="@{'/feed_comment_del?num='+${feedList.getFeed_num()}+'&comment_num='+${comment.getFeed_comment_num()}}">삭제</a></button>
+									        
+									        <form action="/feed_comment_del" id="deleteFeedCommentForm">
+												<input type="hidden" name="num" th:value="${feedList.getFeed_num()}"/>
+												<input type="hidden" name="comment_num" th:value="${comment.getFeed_comment_num()}"/>
+											</form>
+									        <button type="button" class="btn btn-main rounded-pill px-3" id="comment_del_btn">
+									        	<a class="dropdown-item active" th:href="@{'/feed_comment_del?num='+${feedList.getFeed_num()}+'&comment_num='+${comment.getFeed_comment_num()}}">삭제</a>
+									        </button>
 									      </div>
 									    </div>
 									  </div>
@@ -240,6 +247,30 @@
 		function func_delModalBtn() {
 			document.getElementById('deleteFeedForm').submit();
 		}
+		/* function func_delModalBtn_comment() {
+			document.getElementById('deleteFeedCommentForm').submit();
+		} */
+
+		// #btn-pay 버튼을 클릭했을 때의 동작
+		$("#comment_del_btn").click(function() {
+			$('#feed_del_Modal').modal('show');
+
+			$.ajax({
+				type : "POST",
+				url : "feed_comment_del",
+				data : formData,
+				success : function(response) {
+					// 데이터 저장에 성공한 경우
+					console.log("데이터 저장 성공!");
+					console.log(response.courseNum);
+				},
+				error : function(xhr, status, error) {
+					// 데이터 저장에 실패한 경우
+					console.error("데이터 저장 실패!");
+					console.error("에러: ", error);
+				}
+			});
+		});
 	</script>
 </body>
 </html>
