Fix: 피드 삭제 오류 수정

--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -242,6 +242,12 @@
 			}
 		});
 	</script>
+		<!-- DEL모달 -->
+	<script>
+		function func_delModalBtn(){
+	        document.getElementById('deleteFeedForm').submit();
+	     }
+	</script>
 
 </body>
 </html>
