--- a/src/main/resources/templates/thymeleaf/Member/FindPw_Result.html
+++ b/src/main/resources/templates/thymeleaf/Member/FindPw_Result.html
@@ -5,10 +5,11 @@
 
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
+
 	<!-- addMember 페이지 -->
 	<div class="container addMember_wrap">
 		<div class="row my-5">
-			<form action="/FindPw_Result_Action" method="post">
+			<form action="/FindPw_Result_Action" method="post" id="passwordReset">
 				<div class="col-md-8 col-lg-7 col-xl-6 mx-auto my-5 gap-2">
 					<input type="hidden" name="Member_Id" th:value="${param.Member_Id}"/>
 					<div
@@ -29,11 +30,11 @@
 								<input type="password" class="form-control" id="passwordCK"
 									placeholder="비밀번호 확인" name="passwordCK"> 
 									<label
-									for="passwordCheek" class="form-label">비밀번호 확인</label>
+									for="passwordCK" class="form-label">비밀번호 확인</label>
 							</div>
 						</div>
 						<div class="col-12">
-							<button type="submit" class="btn btn-main w-100 p-3 rounded-4 my-2">비밀번호 변경하기</button>
+							<button type="button" onClick="reset_Pw()" class="btn btn-main w-100 p-3 rounded-4 my-2">비밀번호 변경하기</button>
 						</div>
 					</div>
 				</div>
@@ -41,6 +42,9 @@
 		</div>
 	</div>
 	<div th:replace="~{footer/footer::footer}"></div>
+	<script src="../validate/member_validate.js"></script>
+
+	
 </body>
 
 </html>
