24-03-13 | 장창엽 | 밴드 멤버 검색 기능 작업

--- a/src/main/resources/templates/thymeleaf/band/bandFeedUpdate.html
+++ b/src/main/resources/templates/thymeleaf/band/bandFeedUpdate.html
@@ -22,7 +22,7 @@
             	<input type="hidden" name="bandfeednum" th:value="${bandfeednum}"/>
             	<input name="bandUrl" type="hidden" th:value="${bandUrl}"  />
                 <textarea id="summernote" name="band_feed_content" ></textarea>
-                <input type="submit" name="doit" value="수정하기" onclick=""/>
+                <input type="submit" name="doit" value="수정하기" />
                	<input type="button" value="취소" onclick="history.back()" />
             </form>
         </div>
