--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -238,7 +238,7 @@
                            <h5 th:text="${aiccFood2.getEvent_name()}" class="mb-1 f17 text-truncate"></h5>
                            <p th:text="${aiccFood2.getEvent_content()}" class="text-truncate f14 mb-0"></p>
                         </div>
-                        <div class="col"></div>
+                        <div class="col w-100 my-3"></div>
                      </div>
                      </a>
                      </div>
