--- a/src/main/resources/templates/thymeleaf/info/Event_comment_update.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_comment_update.html
@@ -83,7 +83,7 @@
 			<div class="col text-center">
 				<h3 class="my-5">
 					[<span th:text="${view.getEvent_category()}">버튼</span>] <span
-						th:text="${view.getEvent_title()}"></span>
+						th:text="${view.getEvent_name()}"></span>
 				</h3>
 				<img th:src="@{'../img/info/' + ${view.getEvent_thumbnail()}}"
 					alt="" class="img-fluid mx-auto">
