24-03-12 | 박검지 | 피드 필터링 영역 position 변경

--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -50,9 +50,9 @@
 								<li ><a class="dropdown-item " href="info">여행정보</a></li>
 								<li><a class="dropdown-item " href="infoCourse">여행코스</a></li>
 							</ul></li>
-						<li class="nav-item"><a class="nav-link mb-3 mb-md-0"
+						<li class="nav-item"><a class="nav-link"
 							href="map">지도</a></li>
-						<li class="nav-item"><a class="nav-link" href="feed">피드</a></li>
+						<li class="nav-item"><a class="nav-link  mb-3 mb-md-0" href="feed">피드</a></li>
 						<th:block th:if="${session.Member_Id == null}">
 							<li class="nav-item d-md-none"><a
 								class="nav-link mb-3 mb-md-0" href="login">로그인</a></li>
