--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
@@ -177,12 +177,12 @@
 						</div>
 						<div class="col-12 mx-auto mt-4">
 							<div class="form-floating">
-								<input type="text" class="form-control" id="Course_thema" name="Course_thema" placeholder="코스 테마" th:value="${aicc.get(0).getEvent_category()}"><label for="Course_thema" class="form-label">코스 테마</label>
+								<input type="text" class="form-control" id="Course_thema" name="Course_thema" placeholder="코스 테마" th:value="${aicc.get(0).getEvent_category()}" readonly="readonly"><label for="Course_thema" class="form-label" >코스 테마</label>
 							</div>
 						</div>
 						<div class="col-12 mx-auto mt-4">
 							<div class="form-floating">
-								<input type="text" class="form-control" id="Course_Area" name="Course_Area" placeholder="코스 지역" th:value="${aicc.get(0).getEvent_area()}"><label for="Course_Area" class="form-label">코스 지역</label>
+								<input type="text" class="form-control" id="Course_Area" name="Course_Area" placeholder="코스 지역" th:value="${aicc.get(0).getEvent_area()}"  readonly="readonly"><label for="Course_Area" class="form-label">코스 지역</label>
 							</div>
 						</div>
 						<div class="col-12 mx-auto mt-4">
